--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "avataaars",
+  "name": "wiply-avatar",
   "version": "2.0.0",
   "description": "React component for avataaars",
   "main": "dist/index.js",
