--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Fang-Pen Lin <hello@fangpenlin.com>",
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=17.0.0"
+    "react": ">=17.0.0 <19.0.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
