--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wiply-avatar",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "React component for avataaars",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,20 +14,17 @@
   "repository": "git@github.com:fangpenlin/avataaars.git",
   "author": "Fang-Pen Lin <hello@fangpenlin.com>",
   "license": "MIT",
-  "peerDependencies": {
-    "react": ">=17.0.0 <19.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.0",
-    "import-sort-style-renke": "^4.2.0",
-    "tslint": "^6.1.3",
-    "tslint-config-standard": "^9.0.0",
-    "tslint-react": "^5.0.0",
-    "typescript": "^4.3.5"
-  },
   "dependencies": {
+    "react": "^18.0.0",
     "lodash": ">=4.17.21",
     "prop-types": "^15.7.2"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "typescript": "^4.3.5",
+    "tslint": "^6.1.3",
+    "tslint-config-standard": "^9.0.0",
+    "tslint-react": "^5.0.0"
   },
   "importSort": {
     ".js, .jsx, .es6, .es": {
